--- a/test.css
+++ b/test.css
@@ -81,3 +81,73 @@ input#submitBtn {
 label.checked {
   text-decoration: line-through;
 }
+
+input.checked {
+  text-decoration: line-through;
+}
+
+.task-item {
+  display: flex;
+  justify-content: space-between;
+}
+span {
+  cursor: pointer;
+}
+
+.taskContent {
+  margin-left: 8px;
+}
+
+/*.task-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.task-item-left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}*/
+
+/********************CUSTOM CHECKBOX********/
+input[type="checkbox"] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  appearance: none;
+  /* For iOS < 15 to remove gradient background */
+  background-color: #fff;
+  /* Not removed via appearance */
+  margin: 0;
+}
+
+input[type="checkbox"] {
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+  transform: translateY(-0.075em);
+  display: grid;
+  place-content: center;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  transform: scale(0);
+  transition: 120ms transform ease-in-out;
+  box-shadow: inset 1em 1em var(--form-control-color);
+}
+
+input[type="checkbox"]:checked::before {
+  transform: scale(1);
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
